testsuite/tests/linear/should_fail/Linear13.stderr

Linear13.hs:6:14: error:
    • Couldn't match type ‘'GHC.Types.Omega’ with ‘'GHC.Types.One’
        arising from an application
    • In an equation for ‘incorrectLet’:
          incorrectLet a = let x = a in ()

Linear13.hs:9:20: error:
    • Couldn't match type ‘'GHC.Types.Omega’ with ‘'GHC.Types.One’
        arising from an application
    • In an equation for ‘incorrectLazyMatch’:
          incorrectLazyMatch x = let (a, b) = x in b

Linear13.hs:12:24: error:
    • Couldn't match type ‘'GHC.Types.Omega’ with ‘'GHC.Types.One’
        arising from an application
    • In an equation for ‘incorrectCasePromotion’:
          incorrectCasePromotion x = case x of { (a, b) -> b }
